input/css/breeze: Set correct values for alignment of ItemDelegates
Otherwise we rely on the defaults, which work but aren't necessarily
ideal.

--- a/src/input/css/styles/breeze/delegate.css
+++ b/src/input/css/styles/breeze/delegate.css
@@ -24,6 +24,8 @@ swipedelegate
     icon-size: var(--icon-size-smallmedium);
 
     layout-alignment: content fill center 0;
+    icon-alignment: content start center 0;
+    text-alignment: content fill center 0;
 
     color: var(--window-text-color);
 
